--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-7.66MB/s(Youtube:不良林), server: 36.156.219.92, port: 10199, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇨🇳 中国-14.80MB/s(Youtube:不良林), server: 117.91.179.134, port: 10347, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: 117.91.179.134, port: 10355, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
   - {name: 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
-  - {name: 🇺🇸 美国-3.39MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林), server: 213.183.53.177, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
-  - {name: 🇬🇧 英国-1.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-672.9KB/s(Youtube:不良林), server: v1.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v1.ssrsub.com}}
-  - {name: 🇺🇸 美国-395.0KB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: fb060b62-dfcc-11ec-9339-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇺🇸 美国-361.4KB/s(Youtube:不良林), server: 43.200.6.115, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇬🇧 英国-856.7KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
+  - {name: 塞浦路斯-394.2KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
+  - {name: 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-527.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇰🇷 韩国-2.95MB/s(Youtube:不良林), server: 3.35.207.65, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-417.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-381.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-672.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-395.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-361.4KB/s(Youtube:不良林)
-      - 🇬🇧 英国-856.7KB/s(Youtube:不良林)
+      - 塞浦路斯-394.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
+      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
