--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-7.66MB/s(Youtube:不良林), server: 36.156.219.92, port: 10199, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇨🇳 中国-14.80MB/s(Youtube:不良林), server: 117.91.179.134, port: 10347, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇨🇳 中国-8.19MB/s(Youtube:不良林), server: 117.91.179.134, port: 10355, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林), server: neteasy.ga, port: 28931, type: trojan, password: MnROfwtPYa, sni: neteasy.ga, skip-cert-verify: true}
-  - {name: 塞浦路斯-394.2KB/s(Youtube:不良林), server: 213.169.137.221, port: 989, type: ss, cipher: aes-256-cfb, password: f8f7aCzcPKbsF8p3}
-  - {name: 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇺🇸 美国-2.65MB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇨🇳 中国-527.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇰🇷 韩国-2.95MB/s(Youtube:不良林), server: 3.35.207.65, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: 117.91.179.134, port: 10347, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.37MB/s(Youtube:不良林), server: 117.91.179.134, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇺🇸 美国-282.9KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇭🇰 香港-2.33MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
+  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 36.156.219.92, port: 10223, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇫🇷 法国-2.51MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇰🇷 韩国-492.7KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-7.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.80MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.19MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-348.5KB/s(Youtube:不良林)
-      - 塞浦路斯-394.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.65MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-527.5KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-2.95MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
+      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
