--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.96MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-7.43MB/s(Youtube:不良林), server: 117.91.179.134, port: 10347, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: u2.anmu.one, port: 16161, type: vmess, uuid: 919ac815-1776-47fe-8b54-508ef4f39421, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.37MB/s(Youtube:不良林), server: 117.91.179.134, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇺🇸 美国-282.9KB/s(Youtube:不良林), server: 54.214.170.7, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇭🇰 香港-2.33MB/s(Youtube:不良林), server: 511hk.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 511hk.fans8.xyz}}
-  - {name: 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.85MB/s(Youtube:不良林), server: 36.156.219.92, port: 10223, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
-  - {name: 🇫🇷 法国-2.51MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇰🇷 韩国-492.7KB/s(Youtube:不良林), server: 13.125.218.170, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林), server: 213.183.53.177, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇨🇳 中国-2.50MB/s(Youtube:不良林), server: 36.156.219.92, port: 10189, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇺🇸 美国-1.49MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.19MB/s(Youtube:不良林), server: 117.91.179.134, port: 10353, type: ss, cipher: chacha20-ietf-poly1305, password: 49bd189b-9531-4d21-a3f9-95a099ceaad2}
+  - {name: 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-1011.3KB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-807.0KB/s(Youtube:不良林), server: jp04.vproxy.us, port: 56565, type: trojan, password: acf34fb3-6fed-40c6-b6ab-b5bedf5827a2, sni: jp04.vproxy.us, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-220.1KB/s(Youtube:不良林), server: v2.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v2.ssrsub.com}}
+  - {name: 🇨🇳 中国-376.9KB/s(Youtube:不良林), server: 523hk1.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 523hk1.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.37MB/s(Youtube:不良林)
-      - 🇺🇸 美国-282.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.85MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.51MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-492.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-255.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.19MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1011.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-807.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-220.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-376.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
